--- a/styles/style.css
+++ b/styles/style.css
@@ -24,3 +24,13 @@ img {
 p {
     padding: 10px;
 }
+
+aside {
+    width: 20em;
+    margin: 1em;
+    border: 1px solid rgba(0, 0, 0, 0.2); /* why use rgba instead of hex here? */
+    padding: 1em;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
