--- a/styles/style.css
+++ b/styles/style.css
@@ -22,15 +22,35 @@ img {
 }
                 
 p {
-    padding: 10px;
+    padding: 0px;
 }
 
 aside {
-    width: 20em;
-    margin: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.2); /* why use rgba instead of hex here? */
-    padding: 1em;
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2); /* 1 */
+    padding: 1rem;
     background-color: #eee;
     color: #333;
+    text-align: center;
+}
+
+main {
+    max-width: 840px;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+main img {
+    width: 150px;
+    height: auto;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
     text-align: center;
 }
