--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -9,7 +9,7 @@
     --heading-font: Sarabun, serif;
     --paragraph-font: Dosis, serif;
   
-    --nav-background-color: #fff;
+    --nav-background-color: #EFE9CE;
     --nav-link-color: #064e8d;
     --nav-hover-link-color: #fff;
     --nav-hover-background-color: rgba(6, 78, 141, 8);
