--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@
     --nav-background-color: #EFE9CE;
     --nav-link-color: #064e8d;
     --nav-hover-link-color: #EFE9CE;
-    --nav-hover-background-color: rgba(6, 78, 141, 8);
+    --nav-hover-background-color: rgba(6, 78, 141, .8);
   }
           
   body {
@@ -27,14 +27,10 @@
     color: var(--primary-color);
   }
   
-  
-  
   header {
     padding: 20px;
     background-color: var(--accent1-color);
   }
-  
-  
   
   p {
     padding: 25px;
