--- a/styles/style.css
+++ b/styles/style.css
@@ -75,3 +75,9 @@ footer {
     width: 20em;
     text-align: center;
   }
+
+  aside h2 {
+    position: absolute;
+    top: 47px;
+    left: 150px;
+  }
