--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -59,18 +59,35 @@
     background-color: var(--nav-hover-background-color);
   }
   
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #EFE9CE;
+  }
+
+  nav {
+    display: flex;
+}
+
+nav a {
+    margin: 0 15px;
+    text-decoration: none;
+    color: #333;
+}
+
 nav {
   display: flex;
 }
-nav a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: #333; /* Adjust the color as needed */
-}
 
-/* Add a bit of spacing for better readability */
 main {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
-  
+
+.hero img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
